ui/modules/multiplayer/multiplayer.css
#top-bar {
	background:#404040b8;
}

#left-menu {
	color:white;
	background-color:#404040b8;
}

#back {
	width:100%;
	height: 100%;
}

table#serversTable {
    width: 100%;
	color: white;
}

#serversTable th {
	background-color: rgba(0, 0, 0, 0);
	color: white;
	transition: 0.2s;
}

#serversTable th:hover {
	background-color: rgba(0, 0, 0, 0.25);
}

#serversTable tr:hover {
	background-color: rgba(0, 0, 0, 0.25);
}

.highlight {
	background-color: #99AAB5 !important;
}

.dropdown {
    min-width: 150px;
}

.button {
  color: white;
  text-align: center;
  text-decoration: none;
  font-size: 15px;
  transition-duration: 0.2s;
  cursor: pointer;
}

.button {
	background-color: rgb(212, 100, 26);
	color: white;
	margin:0px;
	margin-bottom:20px;
	margin-left: 15px;
}

.button:hover {
	background-color: white;
}

.close-button {
	width:50px;
	margin-left:auto;
	float:right;
	margin-right:5px;
}

#connect-button {
	width:200px;
	margin-left:auto;
	float:right;
}

#direct-connect-button {
	width: 425px;
	margin-left: 0px;
}

#launcher-connect-button {
	width: 250px;
	margin: 0 10px 0 0;
	background: #576EBF;
}
#launcher-connect-button:hover {
	background-color: #374EAF;
}

#launcher-port {
	width: 125px;
	margin-bottom: 8px;
}

md-content {
	background-color: rgba(101, 101, 101, 0.34);
}

div#LoadingServer {
    position: absolute;
    z-index: 100;
    width: 100vw;
    height: 100vh;
    left: 0px;
    top: 0px;
    color: white;
    background-color: rgba(0, 0, 0, 0.75);
}

div#LoadingBody {
    margin: 20%;
    width: 60%;
    background-color: #848484;
    padding: 15px;
    border-radius: 5px;
}

div#addCustomFav {
	color: white;
	background-color: rgba(0, 0, 0, 0.75);

	position: absolute;
    z-index: 100;

	top: 40%;
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
	left:50%;


    background-color: #848484;
    padding: 15px;
    border-radius: 5px;
}


input[type="text"] {
  display: block;
  width: 400px;
  margin: 0 0 20px;
  padding: 8px 12px 10px 12px;
  border: 1px solid rgba(0,0,0,.5);
  background: rgba(0,0,0,.25);
  color:white;
}

input[type="password"] {
  display: block;
  width: 400px;
  margin: 0 0 20px;
  padding: 8px 12px 10px 12px;
  border: 1px solid rgba(0,0,0,.5);
  background: rgba(0,0,0,.25);
  color:white;
  margin-right: 15px;
}

.row {
    width: 100%;
    padding-top: 10px;
		display: flex;
}

.col {
	width: 50%;
}

tr#ServerInfoRow {
    background-color: #3535357a;
}

ul.serverItemDetails {
    list-style: none;
}

md-checkbox .md-container {
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-100%);
    transform: translateY(-100%);
    display: inline-block;
    width: 18px;
    height: 18px;
    left: 0;
    right: auto
}

md-checkbox {
    box-sizing: border-box;
    display: block;
    margin: 8px;
    white-space: nowrap;
    cursor: pointer;
    outline: 0;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding-left: 18px;
    padding-right: 0;
    position: relative;
    line-height: 26px;
    min-width: 18px;
    color: white;
    min-height: 18px;
}

md-slider.ng-pristine.ng-untouched.ng-valid.md-default-theme.ng-empty {
    padding-top: 0px;
}

[placeholder]::-webkit-input-placeholder { color: rgba(255,255,255,.8); }
[placeholder]:hover::-webkit-input-placeholder { color: rgba(255,255,255,.4); }
[placeholder]:focus::-webkit-input-placeholder { color: transparent; }

[placeholder]::-moz-placeholder { color: rgba(255,255,255,.8); }
[placeholder]:hover::-moz-placeholder { color: rgba(255,255,255,.4); }
[placeholder]:focus::-moz-placeholder { color: transparent; }

[placeholder]:-ms-input-placeholder { color: rgba(255,255,255,.8); }
[placeholder]:hover:-ms-input-placeholder { color: rgba(255,255,255,.4); }
[placeholder]:focus:-ms-input-placeholder { color: transparent; }

.text-white {
	color: white;
}

.text-red {
	color: red;
}

#MultiplayerLoginBody {
	position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(1,1,1,0.7);
  z-index: 3;
}

.GuestLoginContainer {
	width: 500px;
  height: 500px;
  left: calc(50vw - 500px);
  top: calc(50vh - 500px);
  position: absolute;
}

